--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -44,16 +44,16 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-  shared_preferences: ^2.0.5 # バージョンは執筆時の最新版のため適宜最新化する
+  shared_preferences: ^2.0.13 # バージョンは執筆時の最新版のため適宜最新化する
   # ちょっとしたデータをスマートフォンの中に保存しておきたいとき
   # DBまでは作らず、KEY/VALUEで簡素に保存できるパッケージ
 
-  url_launcher: ^6.0.3 #バージョンは執筆時の最新版のため適宜最新化する
+  url_launcher: ^6.0.20 #バージョンは執筆時の最新版のため適宜最新化する
   # URLランチャは指定したURLをブラウザを起動できるパッケージ
 
   flutter_launcher_icons:
@@ -63,7 +63,7 @@ dev_dependencies:
   
   flutter_driver: # エミュレータを用いて実際の動作に近い環境で行う試験
     sdk: flutter
-  test: any
+  test: ^1.19.5
 
 flutter_icons:
     android: true
