[update]#11 バリデーションを追加

--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -65,6 +65,8 @@ dev_dependencies:
     sdk: flutter
   test: ^1.19.5
 
+  email_validator: ^2.0.1
+
 flutter_icons:
     android: true
     ios: true
